--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,13 @@ hachoir
 heroku3
 lyricsgenius
 motor
-pillow==9.5.0
+pillow==10.0.1
 psutil
 py-tgcalls==0.9.7
 pykeyboard
 pyrogram==1.4.16
 python-dotenv
-pyyaml==5.4
+pyyaml
 requests
 speedtest-cli
 spotipy
